--- a/ClinicalTrialAPI/ClinicalTrialAPI/appsettings.json
+++ b/ClinicalTrialAPI/ClinicalTrialAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=localhost,1433; Initial Catalog=Developer; User Id=sa; Password=StronKPassW0rd1!; Trusted_Connection=False; TrustServerCertificate=True;",
+        "ClinicalTrialAPIContext": "Server=localhost,1433;User Id=sa; Password=StronKPassW0rd1!; Database=ClinicalTrialAPIContext; Trusted_Connection=False; MultipleActiveResultSets=true; TrustServerCertificate=True;"
+    }
 }
