docker compose add

--- a/ClinicalTrialAPI/ClinicalTrialAPI.csproj
+++ b/ClinicalTrialAPI/ClinicalTrialAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>586e7a24-c077-4662-988d-adbc2b814ca2</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
